--- a/app.json
+++ b/app.json
@@ -41,6 +41,10 @@
       "description": "Enter Bot Owners IDS",
       "required": true,
       "value":"6542673293"
+    },
+    "DELAY": {
+      "description": "Delay in seconds before channel join request should be accepted",
+      "required": false
     }
         
   },
